--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-hashlink": "^0.6.0",
     "react-scripts": "3.4.0"
   },
   "scripts": {
